# lsd-music-gradients

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE-DOCS  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: index.md  methods.md
notebooks/: README.md  extract_timeseries.py  functional_connectivity.py  gradient_analysis.py  gradient_similarity.py
paper/chapter-2/: README.md
src/lsd_music_gradients/: __init__.py  cli.py  config.py  connectivity.py  dynamics.py  gradients.py
tests/: test_cli.py  test_imports.py
